--- a/rimshaoo.html
+++ b/rimshaoo.html
@@ -454,7 +454,7 @@
                             <span class="skill">Управління командою</span>
                             <span class="skill">CRM-системи</span>
                             <span class="skill">Email-маркетинг</span>
-			    <span class="skill">Аналітика</span>
+			    <span class="skill">Базова аналітика</span>
                             <span class="skill">Управління проектами</span>
                             <span class="skill">Контент</span>
                             <span class="skill">Підбір в команду</span>
