--- a/rimshaoo.html
+++ b/rimshaoo.html
@@ -367,7 +367,7 @@
                 <div class="main-column">
                     <div class="section">
                         <h2><div class="icon-box"><i class="fas fa-user"></i></div> Професійний профіль</h2>
-                        <p class="profile-text">Менеджер із понад 15-річним досвідом у сфері управління контентом, базами даних та віддаленими командами. Спеціалізуюсь на вдосконаленні процессів для підвищення їх ефективності, стратегічному плануванні контенту, email-маркетингу та аналізі ефективності.</p>
+                        <p class="profile-text">Менеджер із понад 15-річним досвідом у сфері управління контентом, базами даних та віддаленими командами. Спеціалізуюсь на вдосконаленні процессів для підвищення їх ефективності, email-маркетингу, аналізі його ефективності та участі у стратегічному плануванні контенту, .</p>
                     </div>
                     
                     <div class="divider"></div>
